--- a/ManagementSystem/Views/Auth/Index.cshtml
+++ b/ManagementSystem/Views/Auth/Index.cshtml
@@ -46,7 +46,7 @@
     </div>
 
     <div class="text-center mt-4">
-        <a href="@Url.Action("Create", "Auth")" class="btn btn-success">
+        <a href="@Url.Action("Register", "Auth")" class="btn btn-success">
             <i class="fas fa-plus fa-lg"></i>
             Kullanıcı Ekle
         </a>
