--- a/ManagementSystem/Views/Auth/Index.cshtml
+++ b/ManagementSystem/Views/Auth/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<User>
+﻿@using ManagementSystem.Models.Entities
+@model IEnumerable<User>
 
 @{
     ViewData["Title"] = "Kullanıcılar";
