added dashboard pages

--- a/ManagementSystem/Views/AdminDashboard/Index.cshtml
+++ b/ManagementSystem/Views/AdminDashboard/Index.cshtml
@@ -7,5 +7,9 @@
 </nav>
 
 <div class="container mt-4">
-    <h2>Hoş geldiniz!</h2>
+    <div class="welcome-message">
+        <h2>Hoş Geldiniz!</h2>
+        <p>Yönetici paneline başarılı bir şekilde giriş yaptınız. Sistem üzerinde işlem yapmak için menüyü kullanabilirsiniz. </p>
+        <p>Burada kullanıcılar ve randevular gibi önemli verilere ulaşabilir, yönetebilirsiniz.</p>
+    </div>
 </div>
