--- a/ManagementSystem/Views/Appointments/Index.cshtml
+++ b/ManagementSystem/Views/Appointments/Index.cshtml
@@ -5,6 +5,13 @@
 @{
     ViewData["Title"] = "Randevular";
 }
+<nav class="navbar navbar-dark bg-dark px-4">
+    <a class="navbar-brand text-white" href="#">Admin Panel</a>
+    <div class="d-flex">
+        <a href="/auth/index" class="nav-link text-white">Kullanıcılar</a>
+        <a href="/appointments/index" class="nav-link text-white ms-3">Randevular</a>
+    </div>
+</nav>
 
 <div class="container mt-5">
     <h1 class="text-center mb-4">@ViewData["Title"]</h1>
@@ -90,7 +97,7 @@
             };
 
             $.ajax({
-                url: '/Appointment/UpdateStatus', 
+                    url: '/Appointments/UpdateStatus', 
                 type: 'POST',
                 contentType: 'application/json',
                 data: JSON.stringify(data),
