--- a/ManagementSystem/Views/Auth/Login.cshtml
+++ b/ManagementSystem/Views/Auth/Login.cshtml
@@ -1,4 +1,5 @@
-﻿@model LoginViewModel
+﻿@using ManagementSystem.Models.ViewModels
+@model LoginViewModel
 
 <div class="d-flex justify-content-center align-items-center vh-100">
     <div class="card shadow-lg border-0" style="width: 100%; max-width: 400px; border-radius: 10px;">
