--- a/ManagementSystem/Views/Auth/Register.cshtml
+++ b/ManagementSystem/Views/Auth/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model RegisterViewModel
+﻿@using ManagementSystem.Models.ViewModels
+@model RegisterViewModel
 
 <nav class="navbar navbar-dark bg-dark px-4">
     <a class="navbar-brand text-white" href="#">Admin Panel</a>
