--- a/ManagementSystem/Views/UserDashboard/Index.cshtml
+++ b/ManagementSystem/Views/UserDashboard/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<nav class="navbar navbar-dark bg-dark px-4">
     <a class="navbar-brand text-white" href="#">User Panel</a>
     <div class="d-flex">
-        <a href="/appointments/Index" class="nav-link text-white ms-3">Randevularım</a>
+        <a href="/appointments/getappointmentsbyuserId" class="nav-link text-white ms-3">Randevularım</a>
     </div>
 </nav>
 
