--- a/ManagementSystem/Views/Appointments/GetAppointmentsByUserId.cshtml
+++ b/ManagementSystem/Views/Appointments/GetAppointmentsByUserId.cshtml
@@ -48,6 +48,12 @@
             </tbody>
         </table>
     </div>
+
+    <div class="text-center mt-4">
+        <a href="@Url.Action("Create", "Appointments")" class="btn btn-success">
+            <i class="fas fa-plus fa-lg"></i> Randevu Ekle
+        </a>
+    </div>
 </div>
 
 <div class="modal fade" id="editStatusModal" tabindex="-1" role="dialog" aria-labelledby="editStatusModalLabel" aria-hidden="true">
