--- a/ManagementSystem/Views/AdminDashboard/Index.cshtml
+++ b/ManagementSystem/Views/AdminDashboard/Index.cshtml
@@ -3,6 +3,7 @@
     <div class="d-flex">
         <a href="/auth/index" class="nav-link text-white">Kullanıcılar</a>
         <a href="/appointments/index" class="nav-link text-white ms-3">Randevular</a>
+        <a href="/auth/login" class="nav-link text-white ms-3">Çıkış Yap</a>
     </div>
 </nav>
 
