--- a/ManagementSystem/Views/UserDashboard/Index.cshtml
+++ b/ManagementSystem/Views/UserDashboard/Index.cshtml
@@ -2,6 +2,7 @@
     <a class="navbar-brand text-white" href="#">User Panel</a>
     <div class="d-flex">
         <a href="/appointments/getappointmentsbyuserId" class="nav-link text-white ms-3">Randevularım</a>
+        <a href="/auth/login" class="nav-link text-white ms-3">Çıkış Yap</a>
     </div>
 </nav>
 
