updated header links

--- a/ManagementSystem/Views/Appointments/Index.cshtml
+++ b/ManagementSystem/Views/Appointments/Index.cshtml
@@ -6,10 +6,11 @@
     ViewData["Title"] = "Randevular";
 }
 <nav class="navbar navbar-dark bg-dark px-4">
-    <a class="navbar-brand text-white" href="#">Admin Panel</a>
+    <a class="navbar-brand text-white" href="/admindashboard/index">Admin Panel</a>
     <div class="d-flex">
         <a href="/auth/index" class="nav-link text-white">Kullanıcılar</a>
         <a href="/appointments/index" class="nav-link text-white ms-3">Randevular</a>
+        <a href="/auth/login" class="nav-link text-white ms-3">Çıkış Yap</a>
     </div>
 </nav>
 
