--- a/ManagementSystem/Views/UserDashboard/Index.cshtml
+++ b/ManagementSystem/Views/UserDashboard/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<nav class="navbar navbar-dark bg-dark px-4">
-    <a class="navbar-brand text-white" href="#">User Panel</a>
+    <a class="navbar-brand text-white" href="/userdashboard/index">User Panel</a>
     <div class="d-flex">
         <a href="/appointments/getappointmentsbyuserId" class="nav-link text-white ms-3">Randevularım</a>
         <a href="/auth/login" class="nav-link text-white ms-3">Çıkış Yap</a>
