--- a/ManagementSystem/Views/AdminDashboard/Index.cshtml
+++ b/ManagementSystem/Views/AdminDashboard/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<nav class="navbar navbar-dark bg-dark px-4">
-    <a class="navbar-brand text-white" href="#">Admin Panel</a>
+    <a class="navbar-brand text-white" href="/admindashboard/index">Admin Panel</a>
     <div class="d-flex">
         <a href="/auth/index" class="nav-link text-white">Kullanıcılar</a>
         <a href="/appointments/index" class="nav-link text-white ms-3">Randevular</a>
