--- a/ManagementSystem/Views/Appointments/CreateAppointment.cshtml
+++ b/ManagementSystem/Views/Appointments/CreateAppointment.cshtml
@@ -5,7 +5,7 @@
     <a class="navbar-brand text-white" href="/userdashboard/index">User Panel</a>
     <div class="d-flex">
         <a href="/appointments/getappointmentsbyuserId" class="nav-link text-white ms-3">Randevularım</a>
-        <a href="/auth/login" class="nav-link text-white ms-3">Çıkış Yap</a>
+        <a href="/auth/logout" class="nav-link text-white ms-3">Çıkış Yap</a>
     </div>
 </nav>
 
