--- a/ManagementSystem/Views/Auth/Register.cshtml
+++ b/ManagementSystem/Views/Auth/Register.cshtml
@@ -6,7 +6,7 @@
     <div class="d-flex">
         <a href="/auth/index" class="nav-link text-white">Kullanıcılar</a>
         <a href="/appointments/index" class="nav-link text-white ms-3">Randevular</a>
-        <a href="/auth/login" class="nav-link text-white ms-3">Çıkış Yap</a>
+        <a href="/auth/logout" class="nav-link text-white ms-3">Çıkış Yap</a>
     </div>
 </nav>
 <div class="content-wrapper d-flex justify-content-center align-items-center min-vh-100">
