added migration and bug fixed

--- a/ManagementSystem/Views/AdminDashboard/Index.cshtml
+++ b/ManagementSystem/Views/AdminDashboard/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<nav class="navbar navbar-dark bg-dark px-4">
+﻿@{
+    ViewData["Title"] = "Admin Panel";
+}
+<nav class="navbar navbar-dark bg-dark px-4">
     <a class="navbar-brand text-white" href="/admindashboard/index">Admin Panel</a>
     <div class="d-flex">
         <a href="/auth/index" class="nav-link text-white">Kullanıcılar</a>
