--- a/ManagementSystem/Views/Auth/Register.cshtml
+++ b/ManagementSystem/Views/Auth/Register.cshtml
@@ -1,6 +1,10 @@
 ﻿@using ManagementSystem.Models.ViewModels
 @model RegisterViewModel
 
+@{
+    ViewData["Title"] = "Kullanıcı Olustur";
+}
+
 <nav class="navbar navbar-dark bg-dark px-4">
     <a class="navbar-brand text-white" href="/admindashboard/index">Admin Panel</a>
     <div class="d-flex">
