--- a/ManagementSystem/Views/Appointments/GetAppointmentsByUserId.cshtml
+++ b/ManagementSystem/Views/Appointments/GetAppointmentsByUserId.cshtml
@@ -51,7 +51,7 @@
     </div>
 
     <div class="text-center mt-4">
-        <a href="@Url.Action("Create", "Appointments")" class="btn btn-success">
+        <a href="@Url.Action("CreateAppointment", "Appointments")" class="btn btn-success">
             <i class="fas fa-plus fa-lg"></i> Randevu Ekle
         </a>
     </div>
