--- a/ManagementSystem/Views/Appointments/GetAppointmentsByUserId.cshtml
+++ b/ManagementSystem/Views/Appointments/GetAppointmentsByUserId.cshtml
@@ -75,8 +75,14 @@
                 <div class="modal-body">
                     <input type="hidden" id="editAppointmentId" />
                     <div class="form-group">
-                        <label for="editUserName">Servis</label>
-                        <input type="number" class="form-control" id="editAppointmentService" required />
+                        <label for="editAppointmentService">Servis</label>
+                        <!-- Servisler dropdown'u, tüm servisler listelenecek -->
+                        <select class="form-control" id="editAppointmentService" required>
+                            @foreach (var service in ViewBag.Services)
+                            {
+                                <option value="@service.Id">@service.Name</option>
+                            }
+                        </select>
                     </div>
                     <div class="form-group">
                         <label for="editAppointmentDate">Randevu Tarihi</label>
@@ -90,6 +96,7 @@
         </div>
     </div>
 </div>
+
 
 @section Scripts {
     <script>
