--- a/ManagementSystem/Views/Auth/Index.cshtml
+++ b/ManagementSystem/Views/Auth/Index.cshtml
@@ -47,8 +47,7 @@
                             </a>
 
                             <form action="@Url.Action("Delete", "Auth", new { id = user.Id })"
-                                  method="post" class="d-inline"
-                                  onsubmit="return confirm('Bu kullanıcıyı silmek istediğinizden emin misiniz?');">
+                                  method="post" class="d-inline">
                                 @Html.AntiForgeryToken()
                                 <button type="submit" class="btn btn-danger btn-sm ml-2">
                                     <i class="fas fa-trash fa-lg"></i>
