--- a/ManagementSystem/Views/Auth/Index.cshtml
+++ b/ManagementSystem/Views/Auth/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="d-flex">
         <a href="/auth/index" class="nav-link text-white">Kullanıcılar</a>
         <a href="/appointments/index" class="nav-link text-white ms-3">Randevular</a>
-        <a href="/auth/logout" class="nav-link text-white ms-3">Çıkış Yap</a>
+        <a href="/auth/logout" class="nav-link text-white ms-3">Çıkış Yap</a>
     </div>
 </nav>
 
@@ -36,18 +36,15 @@
                         <td>@user.UserName</td>
                         <td>@user.UserType</td>
                         <td class="text-right">
-                            <a href="javascript:void(0);"
-                               class="btn btn-warning btn-sm editUserBtn"
-                               data-id="@user.Id"
-                               data-firstname="@user.FirstName"
-                               data-lastname="@user.LastName"
-                               data-username="@user.UserName"
-                               data-usertype="@((int)user.UserType)">
+                            <button class="btn btn-warning btn-sm editUserBtn" data-id="@user.Id"
+                                    data-firstname="@user.FirstName"
+                                    data-lastname="@user.LastName"
+                                    data-username="@user.UserName"
+                                    data-usertype="@((int)user.UserType)">
                                 <i class="fas fa-edit fa-lg"></i>
-                            </a>
+                            </button>
 
-                            <form action="@Url.Action("Delete", "Auth", new { id = user.Id })"
-                                  method="post" class="d-inline">
+                            <form action="@Url.Action("Delete", "Auth", new { id = user.Id })" method="post" class="d-inline">
                                 @Html.AntiForgeryToken()
                                 <button type="submit" class="btn btn-danger btn-sm ml-2">
                                     <i class="fas fa-trash fa-lg"></i>
@@ -60,52 +57,49 @@
         </table>
     </div>
 
-    <div class="text-center mt-4">
-        <a href="@Url.Action("Register", "Auth")" class="btn btn-success">
-            <i class="fas fa-plus fa-lg"></i> Kullanıcı Ekle
-        </a>
-    </div>
-</div>
-
-<div class="modal fade" id="editUserModal" tabindex="-1" role="dialog" aria-labelledby="editUserModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-        <div class="modal-content rounded-lg shadow-lg">
-            <form id="editUserForm">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="editUserModalLabel">Kullanıcıyı Güncelle</h5>
-                </div>
-                <div class="modal-body">
-                    <input type="hidden" id="editUserId" />
-                    <div class="form-group">
-                        <label for="editFirstName">Ad</label>
+    <!-- Update User Form (Card Layout Below the Table) -->
+    <div class="card mt-4 shadow-sm" id="editInlineFormContainer" style="display: none;">
+        <div class="card-header bg-secondary text-white">
+            <strong>Kullanıcıyı Güncelle</strong>
+        </div>
+        <div class="card-body">
+            <form id="editInlineForm">
+                <input type="hidden" id="editUserId" />
+                <div class="row mb-3">
+                    <div class="col-md-4">
+                        <label>Ad</label>
                         <input type="text" class="form-control" id="editFirstName" required />
                     </div>
-                    <div class="form-group">
-                        <label for="editLastName">Soyad</label>
+                    <div class="col-md-4">
+                        <label>Soyad</label>
                         <input type="text" class="form-control" id="editLastName" required />
                     </div>
-                    <div class="form-group">
-                        <label for="editUserName">Kullanıcı Adı</label>
+                    <div class="col-md-4">
+                        <label>Kullanıcı Adı</label>
                         <input type="text" class="form-control" id="editUserName" required />
                     </div>
-                    <div class="form-group">
-                        <label for="editUserType">Kullanıcı Tipi</label>
+                    <div class="col-md-4">
+                        <label>Kullanıcı Tipi</label>
                         <select class="form-control" id="editUserType" required>
                             <option value="1">User</option>
                             <option value="2">Admin</option>
                         </select>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary">Kaydet</button>
+                    <div class="col-md-4 d-flex align-items-end">
+                        <button type="submit" class="btn btn-success me-2">Kaydet</button>
+                        <button type="button" class="btn btn-secondary" id="cancelEditBtn">İptal</button>
+                    </div>
                 </div>
             </form>
         </div>
     </div>
 </div>
-
+<div class="text-center mt-4">
+    <a href="@Url.Action("Register", "Auth")" class="btn btn-success">
+        <i class="fas fa-plus fa-lg"></i> Kullanıcı Ekle
+    </a>
+</div>
 @section Scripts {
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         $(document).on('click', '.editUserBtn', function () {
             var userId = $(this).data('id');
@@ -120,10 +114,10 @@
             $('#editUserName').val(userName);
             $('#editUserType').val(userType);
 
-            $('#editUserModal').modal('show');
+            $('#editInlineFormContainer').show();
         });
 
-        $('#editUserForm').on('submit', function (e) {
+        $('#editInlineForm').on('submit', function (e) {
             e.preventDefault();
 
             var data = {
@@ -140,13 +134,17 @@
                 contentType: 'application/json',
                 data: JSON.stringify(data),
                 success: function () {
-                    $('#editUserModal').modal('hide');
+                    $('#editInlineFormContainer').hide();
                     location.reload();
                 },
                 error: function () {
                     alert("Kullanıcı güncellenirken bir hata oluştu.");
                 }
             });
+        });
+
+        $('#cancelEditBtn').on('click', function () {
+            $('#editInlineFormContainer').hide();
         });
     </script>
 }
